Added ionic framework

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 <head>
     <title>open-dash</title>
-
+    <link rel="stylesheet" type="text/css" href="scripts/ionic-v1.3.3/css/ionic.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/angular-material.min.css" />
     <link rel="stylesheet" type="text/css" href="../../node_modules/font-awesome/css/font-awesome.min.css"/>
@@ -25,7 +25,11 @@
   <script type="text/javascript" src="scripts/angular-aria.min.js"></script>
   <script type="text/javascript" src="scripts/angular-animate.min.js"></script>
   <script type="text/javascript" src="scripts/angular-messages.min.js"></script>
+  <script type="text/javascript" src="scripts/angular-resource.min.js"></script>
+  <script type="text/javascript" src="scripts/angular-sanitize.min.js"></script>
+  <script type="text/javascript" src="scripts/ui-router-angularjs.min.js"></script>
   <script type="text/javascript" src="scripts/angular-material.min.js"></script>
+  <script type="text/javascript" src="scripts/ionic-v1.3.3/js/ionic.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
   <script type="text/javascript" src="main/header/header.controller.js"></script>
   <script type="text/javascript" src="main/footer/footer.controller.js"></script>
