--- a/src/client/main/dashboard/dashboard.html
+++ b/src/client/main/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 <div class="gridListdemoBasicUsage">
     <md-grid-list  md-cols="2"  md-row-height="25%" md-gutter="10%">
         <md-grid-tile ng-click="showNavigation()">
-            <div class="icon icon-color button">
+            <div class="icon icon-color">
                 <md-button>
                 <i class="fa fa-globe fa-5x white" aria-hidden="true"></i>
                 <div class="icon-text white">Navigation</div>
