--- a/src/client/main/dashboard/remote/remote.html
+++ b/src/client/main/dashboard/remote/remote.html
@@ -16,6 +16,15 @@
         <md-button>
             <div class="scan white" ng-click="manualRun()">Scan</div>
         </md-button>
+        <div>
+            Scan
+            <label class="toggle toggle-assertive">
+                <input type="checkbox">
+                <div class="track">
+                    <div class="handle"></div>
+                </div>
+            </label>
+        </div>
         <md-switch md-invert
                    class="md-primary button-switch white toggle"
                    ng-model="autoconnect_enabled"
