--- a/src/client/main/footer/footer.html
+++ b/src/client/main/footer/footer.html
@@ -1,4 +1,4 @@
-<div ng-controller="FooterController" layout="row" layout-xs="column" class="footer">
+<div ng-controller="FooterController" class="footer white row">
     <div layout="row" layout-align="center" class="menu icon-color">
         <div flex="25">
             <div class="menu_icon" ng-click="showRemote()">
